<resources>
    <string name="app_name">Driver</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="subject_1">科目一</string>
    <string name="subject_2">科目二</string>
    <string name="subject_3">科目三</string>
    <string name="subject_4">科目四</string>
    <string name="setting">设置</string>
    <string name="other">其他</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="feedback">反馈</string>
    <string name="home">首页</string>
    <string name="share_reason">分享一个特别有趣的APP</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="confirm">确认</string>
    <string name="about_message">相关说明(未完成)</string>

    <string name="random_practice">随机练习</string>
    <string name="order_practice">顺序练习</string>
    <string name="knowledge_point_practice">知识点练习</string>
    <string name="classification_practice">分类练习</string>
    <string name="start_exam">开始考试</string>
    <string name="about_me">关于我</string>
    <string name="my_wrong_question">我的错题</string>
    <string name="my_collection">我的收藏</string>
    <string name="exam_record">考试记录</string>
    <string name="title_activity_classification">选择知识点类型</string>
    <string name="send_feedback">发送反馈</string>
    <string name="prompt">提示</string>
    <string name="be_sure_to_exit">确定要退出么?</string>
    <string name="cancel">取消</string>
    <string name="feedback_can_not_be_empty">反馈内容不能为空</string>
    <string name="feedback_address">10086</string>
    <string name="feedback_send_succeed">反馈已发送成功</string>
    <string name="title_activity_show_questions">练习</string>
    <string name="sorry_please_check_the_network">抱歉,请检查网络后重试</string>
    <string name="collection">收藏</string>
    <string name="change_model">模式更改</string>
    <string name="already_collection">已收藏</string>
    <string name="question_analysis">试题详解</string>
    <string name="test_center">考点:</string>
    <string name="no_data">当前模块无数据</string>
    <string name="practice_mode">练习模式</string>
    <string name="recite_mode">背题模式</string>
    <string name="title_activity_exam">ExamActivity</string>
    <string name="submit">提交</string>
    <string name="tips">提示</string>
    <string name="title_activity_exam_result">考试成绩</string>
    <string name="title_activity_recoder">考试记录</string>

    <string name="loading">加载中</string>
    <string name="title_activity_choise_province">选择省份</string>
    <string name="title_activity_modify_information">ModifyInformationActivity</string>
    <string name="title_activity_choise_question_number">选择组卷题目数</string>


</resources>
